--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "@types/node": "^17.0.25",
+    "express": "^4.17.3",
+    "typescript": "^4.6.3"
   }
 }
